fixed service padding on mobile

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -180,6 +180,10 @@ footer.footer {
   p {
     display: flex;
     align-items: top;
+    @media (max-width: 568px) {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
     span {
     }
     svg {
